# todrind

./: Cargo.toml  default.nix
src/: calendar.rs  dbrind.rs  main.rs  tui.rs
