[package]
name = "todrind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.1"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite"]}
time = "0.3.34"
tokio = {version = "1.37.0", features = ["full"]}
